--- a/slice/index.html
+++ b/slice/index.html
@@ -12,6 +12,11 @@
   <!-- STYLES END -->
 </head>
 <body class="u-overflow-hidden">
+  <!-- PRELOADER START -->
+  <div class="o-preloader">
+    <div class="o-preloader__spinner"></div>
+  </div>
+  <!-- PRELOADER END -->
   <!-- FULL PAGE BACKGROUND START -->
   <div class="o-cover" style="background-image: url('/assets/images/court.jpg')">
     <div class="c-form js-form-login u-display-block u-opacity-1">
