--- a/slice/index.html
+++ b/slice/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="u-overflow-hidden">
   <!-- PRELOADER START -->
-  <div class="o-preloader">
+  <div class="o-preloader" style="display: none">
     <div class="o-preloader__spinner"></div>
   </div>
   <!-- PRELOADER END -->
