--- a/slice/homepage.html
+++ b/slice/homepage.html
@@ -13,8 +13,29 @@
 </head>
 <body>
   <!-- FULL PAGE BACKGROUND START -->
-  <div class="o-cover">
-
+  <div class="o-cover" style="background-image: url('/assets/images/court-vector.jpg');">
+    <div class="c-sidebar">
+      <div class="c-sidebar__user-photo" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1e/Default-avatar.jpg')"></div>
+      <div class="c-sidebar__username">mace</div>
+      <div class="c-sidebar__label">Events</div>
+      <div class="c-sidebar__links">
+        <a href="#" class="c-sidebar__link is-active"><i class="material-icons c-sidebar__icon">event_note</i> All events</a>
+        <a href="#" class="c-sidebar__link"><i class="material-icons c-sidebar__icon">add</i> New event</a>
+      </div>
+      <div class="c-sidebar__label">Locations</div>
+      <div class="c-sidebar__links">
+        <a href="#" class="c-sidebar__link"><i class="material-icons c-sidebar__icon">location_on</i> Venues</a>
+        <a href="#" class="c-sidebar__link"><i class="material-icons c-sidebar__icon">star</i> Favorites</a>
+      </div>
+      <div class="c-sidebar__label">Profile</div>
+      <div class="c-sidebar__links">
+        <a href="#" class="c-sidebar__link"><i class="material-icons c-sidebar__icon">settings</i> Settings</a>
+        <a href="#" class="c-sidebar__link"><i class="material-icons c-sidebar__icon">lock</i> Log out</a>
+      </div>
+    </div>
+    <div class="c-content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat impedit ipsum laboriosam perferendis tempore. Commodi dolorem in officiis perferendis quos suscipit, voluptate? Maiores, quae voluptatem. Eius et molestiae nam officia!
+    </div>
   </div>
   <!-- FULL PAGE BACKGROUND END -->
 
