--- a/slice/form.html
+++ b/slice/form.html
@@ -35,21 +35,34 @@
     </div>
     <div class="c-content">
       <div class="c-content__row">
-        <a href="#" class="c-card c-card--three">
-          <span class="c-card__favorite is-selected"><i class="material-icons">star</i></span>
-          <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> Lorem Ipsum</h1>
-          <p class="c-card__content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at atque consectetur delectus distinctio doloribus, enim et eum eveniet fugit neque, nostrum odit optio ratione sequi sint, velit vero voluptate!
-          </p>
-          <p class="c-card__date">01.06.2018.</p>
-        </a>
-        <a href="#" class="c-card c-card--three">
-          <span class="c-card__favorite"><i class="material-icons">star_border</i></span>
-          <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> Lorem Ipsum</h1>
-          <p class="c-card__content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at atque consectetur delectus distinctio doloribus, enim et eum eveniet fugit neque, nostrum odit optio ratione sequi sint, velit vero voluptate!
-          </p>
-        </a>
+        <div class="c-form c-form--big">
+          <div class="c-form__input-group">
+            <i class="material-icons c-form__icon">person</i>
+            <input class="c-form__input" type="text" placeholder="First Name">
+          </div>
+          <div class="c-form__input-group">
+            <i class="material-icons c-form__icon">person</i>
+            <input class="c-form__input" type="text" placeholder="Last Name">
+          </div>
+          <div class="c-form__input-group">
+            <i class="material-icons c-form__icon">mail</i>
+            <input class="c-form__input" type="email" placeholder="Email">
+          </div>
+          <div class="c-form__input-group">
+            <i class="material-icons c-form__icon">lock</i>
+            <input class="c-form__input" type="password" placeholder="Password">
+          </div>
+          <div class="c-form__input-group">
+            <i class="material-icons c-form__icon">lock</i>
+            <input class="c-form__input" type="password" placeholder="Confirm Password">
+          </div>
+          <div class="c-form__input-group">
+            <select name="" id=""></select>
+          </div>
+          <div class="c-form__field-group">
+            <button class="c-form__button" type="button">Save</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
