--- a/slice/form.html
+++ b/slice/form.html
@@ -13,6 +13,9 @@
 </head>
 <body>
   <!-- FULL PAGE BACKGROUND START -->
+  <div class="c-popup">
+    Information has been saved successfully.
+  </div>
   <div class="o-cover" style="background-image: url('/assets/images/court-vector.jpg');">
     <div class="c-sidebar">
       <div class="c-sidebar__user-photo" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1e/Default-avatar.jpg')"></div>
