--- a/slice/form.html
+++ b/slice/form.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- FULL PAGE BACKGROUND START -->
-  <div class="c-popup">
+  <div class="c-popup js-popup">
     Information has been saved successfully.
   </div>
   <div class="o-cover" style="background-image: url('/assets/images/court-vector.jpg');">
